# SDU_Embedded_Systems_1

ros2_ws_2/: README.md
ros2_ws_2/install/: local_setup.sh  setup.sh
ros2_ws_2/install/my_robot_package/lib/my_robot_package/: serial_image_sender
ros2_ws_2/install/my_robot_package/share/my_robot_package/: package.sh  package.xml
ros2_ws_2/install/my_robot_package/share/my_robot_package/config/: params.yaml
ros2_ws_2/src/my_robot_package/: setup.cfg  setup.py
ros2_ws_2/src/my_robot_package/launch/: serial_image_sender.launch.py
ros2_ws_2/src/my_robot_package/resource/: my_robot_package
uart_image_receiver_ws/: README.md
uart_image_receiver_ws/src/: CMakeLists.txt
uart_image_receiver_ws/src/uart_image_receiver/: README.md  package.xml  setup.cfg  setup.py
uart_image_receiver_ws/src/uart_image_receiver/launch/: uart_image_receiver.launch.py
uart_image_receiver_ws/src/uart_image_receiver/uart_image_receiver/: file_transfer_node.py  uart_image_receiver_node.py  uart_image_sender_node.py
